--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -67,7 +67,7 @@
                 alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
             </div>
             <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Rashmi Ranjan Das</h5>
-            <p class="text-uppercase blue-text mb-0"><strong>Co-Founder & Developer</strong></p>
+            <p class="text-uppercase blue-text mb-0"><strong>Co-Founder & Web Developer</strong></p>
             <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
             <ul class="list-unstyled mb-0">
               <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/rashmiranjan.das.75286" style="color: black; text-decoration: none;">
@@ -98,7 +98,7 @@
             alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Smita Jha</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Web Developer & Content Writer</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Front-End Developer & Content Writer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
         <ul class="list-unstyled mb-0">
           <a class="p-2 fa-lg fb-ic" href="https://www.facebook.com/profile.php?id=100005560818601" style="color: black; text-decoration: none;">
@@ -121,7 +121,7 @@
             alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Shovna Panda</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Web developer & Content Writer</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Web Designer & Content Writer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
           <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/shovna-panda-4277631b8" style="color: black; text-decoration: none;">
             <i class="fab fa-linkedin linkedin blue-text"> </i>
@@ -135,11 +135,11 @@
       </div>
       <div class="col-lg-4 col-md-4 mb-md-0 mb-5">
         <div class="avatar mx-auto">
-          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle z-depth-1"
-            alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
+          <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602103896/Team%20Photo/Suman_gyawbn.jpg" class="rounded-circle z-depth-1"
+            alt="Sample avatar" style="height: 60%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
         <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Suman Patra</h5>
-        <p class="text-uppercase blue-text mb-0"><strong>Web Developer & Content Writer</strong></p>
+        <p class="text-uppercase blue-text mb-0"><strong>Web Designer & Content Writer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
         <ul class="list-unstyled mb-0">
             <a class="p-2 fa-lg tw-ic" href="https://www.linkedin.com/in/suman-patra-888a131b6/" style="color: black; text-decoration: none;">
