--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -298,7 +298,7 @@
                   <div class="carousel-item">
                     <div class="testimonial">
                     <div class="avatar mx-auto mb-4">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle img-fluid"
+                        <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602103896/Team%20Photo/Suman_gyawbn.jpg" class="rounded-circle img-fluid"
                         alt="Third sample avatar image" style="height: 23%; width: 23%">
                     </div>
                     <p style="font-family: cursive;">
@@ -410,7 +410,10 @@
             </div>
         </div>
 
-
+        <!----------------------------------------------------->
+        <div class="container mt-3 mb-4 text-center">
+            <h3>Like Us? Give your honest reviews here :)<span><a href="{% url 'review_page' %}"><button class="btn btn-primary">Give Review</button></a></span></h3>
+        </div>
     </div>
 </div>
 {% endblock %}
