--- a/main/templates/main/resources.html
+++ b/main/templates/main/resources.html
@@ -6,8 +6,8 @@
 <div class="container mt-3 section2" style="text-align: center">
     <h1 style="color:  #00378a;">Resources</h1>
 </div>
-<div class="container mt-3 mb-2">
-    <div class="container mt-3">
+<div class="container mt-1">
+    <div class="container">
         <br>
         <ul class="nav nav-tabs reset-nav">
           <li class="nav-item">
