--- a/main/templates/main/donation.html
+++ b/main/templates/main/donation.html
@@ -10,7 +10,7 @@
         We hope you are having a good time learning from our courses and the resources that we provide to you.
     </p>
     <p class="article-content">
-        We are a small group of 12-15 persons (Btech Students of IIIT Bhubaneswar) who are working day and night to make tutorials for their students and helping them to learn and grow. Everyone is giving their their full dedication towards this noble cause and are helping the students of Odisha in strengthening their technical knowledge.
+        We are a small group of 12-15 persons (Btech Students) who are working day and night to make tutorials for their students and helping them to learn and grow. Everyone is giving their their full dedication towards this noble cause and are helping the students of Odisha in strengthening their technical knowledge.
     </p>
     <p class="article-content">
         The Instructors, The Founders, The Web Developers, The Content Writers and Everyone else now needs your help to grow themselves so that they can help you grow to your heights. 
@@ -24,8 +24,14 @@
         </p>
     </div>
     <div style="text-align: center;">
-        <div class='pm-button'><a href='https://www.payumoney.com/paybypayumoney/#/A916C097ADB7A010E0587C682169290F'><img src='https://www.payumoney.com/media/images/payby_payumoney/new_buttons/21.png' /></a></div>
-        <a href="https://onboarding.payumoney.com/app/account?partner_name=PathaPadha&partner_source=Affiliate+Links&partner_uuid=11eb-05c0-781afeca-a81b-0a696b110fde&source=Partner" target="_blank"><img width="100px" height="100px" src="https://partner.payu.in/packs/_/assets/images/icons/certified-partner-ce70c676cc844c678e8a6e7e373e6c0d.png" /></a>
+        <div class='pm-button'>
+            <span>
+                <a href='https://www.payumoney.com/paybypayumoney/#/A916C097ADB7A010E0587C682169290F'><img src='https://www.payumoney.com/media/images/payby_payumoney/new_buttons/22.png' /></a>
+                <form class="mt-2"><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_FmVUM0GMDblRaI"> </script> </form>
+            </span>
+        </div>
+
+        
     </div>
 </div>
 {% endblock %}
