--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,13 +11,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://www.cleverbox.co.uk/wp-content/uploads/2018/02/i2i-Website.gif.pagespeed.ce.o87stZj0pN.gif" class="d-block w-100" alt="...">
+        <img src="https://www.howtopython.org/wp-content/uploads/2020/04/laptops_python-1170x780.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="https://www.codingelements.com/images/logos/open-graph-coding-elements-logo.png" class="d-block w-100" alt="...">
+        <img src="https://c0.wallpaperflare.com/preview/690/183/611/code-coding-connection-css.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="https://www.codingelements.com/images/logos/open-graph-coding-elements-logo.png" class="d-block w-100" alt="...">
+        <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" class="d-block w-100" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
