--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -10,7 +10,7 @@
 <div class="container mt-4 mb-5 desktop-about">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6">
-            <img class="article-img" style="width: 95%;" src="https://wallpaperaccess.com/full/1397721.jpg">
+            <img class="article-img" style="width: 95%; height: 90%" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602270204/Resources/Our_Vision_e1cahr.jpg">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6">
             <h4>Our Vision</h4>
@@ -23,7 +23,7 @@
             <p class="article-content">We are a small group of Engineering students who have come forward to educate the upcoming youth of our state, <b>ODISHA</b>, and help them in achieving their dreams by teaching them the required technical skills that the present world demands. We are providing the education facility completely free of cost so that each and every student has access to it.</p>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6">
-            <img class="article-img" style="width: 95%;" src="https://wallpaperaccess.com/full/1397721.jpg">
+            <img class="article-img" style="width: 95%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602270344/Resources/Who_we_are_uohx2r.jpg">
         </div>
     </div>
 </div>
@@ -183,7 +183,7 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
           <div class="avatar mx-auto">
-            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602006194/Team%20Photo/Jaydeep_rso4pg.jpg" class="rounded-circle z-depth-1"
+            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602269849/Team%20Photo/Jaydeep_2_sdl9dt.jpg" class="rounded-circle z-depth-1"
               alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
           </div>
           <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Jaydeep Kanungo</h5>
