--- a/main/templates/main/explore.html
+++ b/main/templates/main/explore.html
@@ -183,20 +183,17 @@
 </div>
     <div class="mt-2 mb-4">
         <h3 class="mt-3 mb-3">Coming Soon...</h3>
-    <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Magic With CSS</h5>
+        <div class="list-group-flush">
+          <div class="list-group-item">
+            <p class="article-content mb-0"><i class="fab fa-css3 fa-2x mr-4 blue p-3 white-text rounded " style="color: orange;" aria-hidden="true"></i>Magic with CSS</p>
+          </div>
+          <div class="list-group-item">
+            <p class="article-content mb-0"> <i class="fab fa-git fa-2x mr-4 mr-4 red p-3 white-text rounded" style="color: darkslateblue;" aria-hidden="true"></i>A Tour to Git</p>
+          </div>
+          <div class="list-group-item">
+            <p class="article-content mb-0"><i class="fa fa-laptop fa-2x mr-4 mr-4 red p-3 white-text rounded" style="color: red;" aria-hidden="true"></i>Basics of Computer</p>
           </div>
         </div>
-        <div class="card">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">A Tour To Git</h5>
-          </div>
-        </div>
-      </div>
     </div>
 </div>
 {% endblock %}
