--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -29,6 +29,7 @@ nav{
     text-transform: uppercase;
     text-decoration: none;
     font-weight: 400;
+    font-family: cursive;
 }
 .nav-l
 ink:hover{
