--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,13 +11,10 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://www.howtopython.org/wp-content/uploads/2020/04/laptops_python-1170x780.jpg" class="d-block w-100" alt="...">
+        <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602243043/Resources/Carousel1_u93f7z.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="https://c0.wallpaperflare.com/preview/690/183/611/code-coding-connection-css.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" class="d-block w-100" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -38,7 +35,7 @@
     </div>
 <div class="card-deck">
     <div class="card card1">
-      <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
+      <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602258011/Resources/Offering1_rwxyvu.jpg" alt="Card image cap">
       <div class="card-body">
         <div style="text-align: center;">
           <h5 class="card-title">Programming Tutorial</h5>
@@ -48,7 +45,7 @@
       </div>
     </div>
     <div class="card card2">
-      <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
+      <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602258011/Resources/Offering2_jiarbs.jpg" alt="Card image cap">
       <div class="card-body">
         <div style="text-align: center;">
           <h5 class="card-title">Technical Resources</h5>
@@ -58,7 +55,7 @@
       </div>
     </div>
     <div class="card card3">
-      <img class="card-img-top" src="https://mk0analyticsindf35n9.kinstacdn.com/wp-content/uploads/2019/10/python-1.jpg" alt="Card image cap">
+      <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602258012/Resources/Offering3_vjiy0v.jpg" alt="Card image cap">
       <div class="card-body">
         <div style="text-align: center;">
           <h5 class="card-title">24 X 7 Assitance</h5>
@@ -69,7 +66,7 @@
     </div>
   </div>
 </div>
-<div class="container mt-4" style="text-align: center;">
+<div class="container mt-2" style="text-align: center;">
     <a href="{% url 'explore' %}" ><div class="btn btn-primary">View More Courses</div></a>
 </div>
 </div>
@@ -134,7 +131,7 @@
             <div class="card__front">
               <div class="card card-01">
                 <div class="profile-box-01">
-                  <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602006194/Team%20Photo/Jaydeep_rso4pg.jpg" alt="Card image cap" style="height: 17rem;">
+                  <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602269849/Team%20Photo/Jaydeep_2_sdl9dt.jpg" alt="Card image cap" style="height: 17rem;">
                 </div>
                 <div class="card-body text-center">
                   <span class="badge-box"><i class="fa fa-check"></i></span>
@@ -234,7 +231,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                <img class="home-image" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us" style="width: 100%;">
+                <img class="home-image" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602257767/Resources/AboutUs_gzbnsz.jpg" alt="Us" style="width: 100%;">
             </div>
         </div>
     </div>
@@ -265,7 +262,7 @@
                             alt="First sample avatar image" style="height: 23%; width: 23%">
                         </div>
                         <p style="font-family: cursive;">
-                            <i class="fas fa-quote-left"></i>Taking a big step to persue higher studies and stepping into Engineering, I faced many problems while learning to code. At Pathapadha.in, We believe if good tutorials and elaborate resources are provided at a single place, Anyone can learn to code with ease.<b>"ଜୟ ଜଗନ୍ନାଥ"(Jay Jagannath)</b> <i class="fas fa-quote-right"></i>
+                            <i class="fas fa-quote-left"></i>Taking a big step to pursue higher studies and stepping into Engineering, I faced many problems while learning to code. At Pathapadha.in, We believe if good tutorials and elaborate resources are provided at a single place, Anyone can learn to code with ease.<b>"ଜୟ ଜଗନ୍ନାଥ"(Jay Jagannath)</b> <i class="fas fa-quote-right"></i>
                         </p>
                         <h4 class="font-weight-bold">Rashmi Ranjan Das</h4>
                         <h6 class="font-weight-bold my-3">Co-Founder & Developer</h6>
@@ -338,18 +335,18 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 home-image" style="text-align: center;">
-                    <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                    <img style="width: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602260048/Resources/Python_Tutorials_mdez6w.png" alt="Us">
                 </div>
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                    <img style="width: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263326/Resources/Quiz_auto_x2_jxeqlx.jpg" alt="Us">
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <h3>C++ Tutorials</h3>
-                    <p style="font-family: cursive; font-size:large">We have brought you Tutorials on one of the top most language which is used in almost every company i.e. <b>C++</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
+                    <h3>Practice and Exams</h3>
+                    <p style="font-family: cursive; font-size:large">We have brought to you Weekly as well as Monthly Quizzes to brush up your knowledge and skills. In addition to that we have also provided you Online IDEs so that you can practice on your own. You can find everything here at the cost of just 1 Click and at no extra cost.</p>
                     <div class="container mt-4" style="text-align: center;">
-                      <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a>
+                      <a href="{% url 'exam' %}"><div class="btn btn-primary">Get Started</div></a>
                     </div>
                 </div>
             </div>
@@ -362,7 +359,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                    <img style="width: 100%; height: 82%" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263928/Resources/resources_an4r1c.jpg" alt="Us">
                 </div>
             </div>
         </div>
@@ -376,9 +373,9 @@
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Python Tutorials</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                        <img style="width: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602260048/Resources/Python_Tutorials_mdez6w.png" alt="Us">
                     </div>
-                    <p>We have brought you Tutorials on the most popular programming language of the world which is widely used i.e. <b>PYTHON</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
+                    <p style="font-family: cursive; font-size:large">We have brought you Tutorials on the most popular programming language of the world which is widely used i.e. <b>PYTHON</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
                     <div class="container mt-4" style="text-align: center;">
                       <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a> 
                   </div>
@@ -386,13 +383,13 @@
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <h3>C++ Tutorials</h3>
+                    <h3>Practice and Exams</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                        <img style="width: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263326/Resources/Quiz_auto_x2_jxeqlx.jpg" alt="Us">
                     </div>
-                    <p>We have brought you Tutorials on one of the top most language which is used in almost every company i.e. <b>C++</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
+                    <p style="font-family: cursive; font-size:large">We have brought to you Weekly as well as Monthly Quizzes to brush up your knowledge and skills. In addition to that we have also provided you Online IDEs so that you can practice on your own. You can find everything here at the cost of just 1 Click and at no extra cost.</p>
                     <div class="container mt-4" style="text-align: center;">
-                      <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a> 
+                      <a href="{% url 'exam' %}"><div class="btn btn-primary">Get Started</div></a> 
                   </div>
                 </div>
             </div>
@@ -400,9 +397,9 @@
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Notes and resources</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                        <img style="width: 100%; height: 82%" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263928/Resources/resources_an4r1c.jpg" alt="Us">
                     </div>
-                    <p>Have you ever encountered tutorials, Notes and Resources at the same place? We have made all the facilities available for you entirely free of cost. You can enjoy the Tutorials as well as the resources collected from all over the Internet at one place. Have a good time accessing the resources and Learning from us.</p>
+                    <p style="font-family: cursive; font-size:large">Have you ever encountered tutorials, Notes and Resources at the same place? We have made all the facilities available for you entirely free of cost. You can enjoy the Tutorials as well as the resources collected from all over the Internet at one place. Have a good time accessing the resources and Learning from us.</p>
                     <div class="container mt-4" style="text-align: center;">
                       <a href="{% url 'resources' %}"><div class="btn btn-primary">Access Resources</div></a>
                     </div>
