--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -200,7 +200,7 @@
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602006194/Team%20Photo/Jaydeep_rso4pg.jpg" alt="Card image cap">
+            <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602269849/Team%20Photo/Jaydeep_2_sdl9dt.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="card-text article-content" style="font-family: cursive;">Get into the world of Arduino and Robotics with me. :)</p>
             </div>
