--- a/main/templates/main/explore.html
+++ b/main/templates/main/explore.html
@@ -191,7 +191,7 @@
             <p class="article-content mb-0"> <i class="fab fa-git fa-2x mr-4 mr-4 red p-3 white-text rounded" style="color: darkslateblue;" aria-hidden="true"></i>A Tour to Git</p>
           </div>
           <div class="list-group-item">
-            <p class="article-content mb-0"><i class="fa fa-laptop fa-2x mr-4 mr-4 red p-3 white-text rounded" style="color: red;" aria-hidden="true"></i>Basics of Computer</p>
+            <p class="article-content mb-0"><i class="fa fa-laptop fa-2x mr-4 mr-4 red p-3 white-text rounded" style="color: red;" aria-hidden="true"></i>Computer Basics</p>
           </div>
         </div>
     </div>
