--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -58,7 +58,7 @@
       <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602258012/Resources/Offering3_vjiy0v.jpg" alt="Card image cap">
       <div class="card-body">
         <div style="text-align: center;">
-          <h5 class="card-title">24 X 7 Assitance</h5>
+          <h5 class="card-title">24 X 7 Assistance</h5>
         </div>
         <p class="card-text" style="font-family: cursive;">May it be doubts, counselling, or any career related queries, "We Are Here For You All The Time to Help You Out on Your Journey".</p>
         <div style="text-align: center;"><a href="{% url 'contact' %}"><p style="font-family: cursive;">Contact Us</p></a></div>
