--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -2,6 +2,10 @@
 {% load static %}
 
 
+{% block header %}
+<title>About us | Learn Coding In Odia</title>
+{% endblock %}
+
 {% block content %}
 <div class="container mt-3 mb-3" style="text-align: center">
     <h1>About Us</h1>
