--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -1,6 +1,9 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+{% block header %}
+<title>Contact | Learn Coding In Odia</title>
+{% endblock %}
 
 {% block content %}
 <div class="container mt-3 mb-5">
