--- a/main/templates/main/exam.html
+++ b/main/templates/main/exam.html
@@ -1,8 +1,11 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
-{% block content %}
+{% block header %}
+<title>Practice | Learn Coding In Odia</title>
+{% endblock %}
 
+{% block content %}
 <div class="container mt-3 mb-1" style="text-align: center">
     <h1>Practice and Exam</h1>
 </div>
