--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -29,7 +29,7 @@ nav{
     text-transform: uppercase;
     text-decoration: none;
     font-weight: 400;
-    font-family: cursive;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .nav-l
 ink:hover{
