--- a/main/templates/main/donation.html
+++ b/main/templates/main/donation.html
@@ -1,6 +1,10 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+{% block header %}
+<title>Donate Us | Learn Coding In Odia</title>
+{% endblock %}
+
 {% block content %}
 <div class="container mt-5 mb-5">
     <div style="text-align: center;">
