--- a/main/templates/main/explore.html
+++ b/main/templates/main/explore.html
@@ -1,9 +1,11 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+{% block header %}
+<title>Explore Courses | Learn Coding In Odia</title>
+{% endblock %}
 
 {% block content %}
-
 <div class="container mt-3 mb-3 section2" style="text-align: center">
     <h1 style="color:  #00378a;">Explore Our Courses</h1>
 </div>
