--- a/main/templates/main/resources.html
+++ b/main/templates/main/resources.html
@@ -1,6 +1,9 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+{% block header %}
+<title>Resources | Learn Coding In Odia</title>
+{% endblock %}
 
 {% block content %}
 <div class="container mt-3 section2" style="text-align: center">
