--- a/main/templates/main/reviews.html
+++ b/main/templates/main/reviews.html
@@ -1,6 +1,10 @@
 {% extends 'main/base.html' %}
 {% load static %}
 
+{% block header %}
+<title>Reviews | Learn Coding In Odia</title>
+{% endblock %}
+
 {% block content %}
 <div class="container mt-3 mb-3 section2" style="text-align: center">
     <h1 style="color:  #00378a;">Your Reviews</h1>
