--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -162,7 +162,7 @@
                 <div class="card-body text-center">
                   <span class="badge-box"><i class="fa fa-check"></i></span>
                   <h4 class="card-title">Pratik Mohanty</h4>
-                  <p class="card-text article-content" style="font-family: cursive;">Wanna know Magic of Websites? Join me.</p>
+                  <p class="card-text article-content" style="font-family: cursive;">Wanna know Magic of Websites using HTML? Join me.</p>
                   <div class="btn btn-default text-uppercase">Explore</div>
                 </div>
               </div>
@@ -180,9 +180,10 @@
           </div>
         </div>
       </div>
-      <div class="container mt-5" style="text-align: center;">
-        <a href="{% url 'about' %}"><div class="btn btn-primary">View All Members</div></a>
-      </div>  
+      <br>
+        <div class="container mt-5" style="text-align: center;">
+          <a href="{% url 'about' %}"><div class="btn btn-primary">View All Members</div></a>
+        </div>  
     </div>
 </div>
 
