--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -13,9 +13,14 @@
     <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
     <style>
         .nav-link{
-            font-size: 1rem;
+            font-size: 0.9rem;
             font-weight: 500;
-            margin: 0.1%;
+            margin: 0.2%;
+        }
+        .home-image{
+            display: inline-block;
+            vertical-align: middle;
+            height: 100%;
         }
         
     </style>
