--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -335,13 +335,13 @@
                         <a href="{% url 'explore' %}"><div class="btn btn-primary">Get Started</div></a> 
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-6 home-image" style="text-align: center;">
-                    <img style="width: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602260048/Resources/Python_Tutorials_mdez6w.png" alt="Us">
+                <div class="col-xs-12 col-sm-12 col-md-6 " style="text-align: center;">
+                    <img style="width: 100%;" class="home-image" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602260048/Resources/Python_Tutorials_mdez6w.png" alt="Us">
                 </div>
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <img style="width: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263326/Resources/Quiz_auto_x2_jxeqlx.jpg" alt="Us">
+                    <img style="width: 100%;" class="home-image" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263326/Resources/Quiz_auto_x2_jxeqlx.jpg" alt="Us">
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Practice and Exams</h3>
@@ -360,7 +360,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <img style="width: 100%; height: 82%" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263928/Resources/resources_an4r1c.jpg" alt="Us">
+                    <img style="width: 100%;" class="home-image" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263928/Resources/resources_an4r1c.jpg" alt="Us">
                 </div>
             </div>
         </div>
@@ -374,7 +374,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Python Tutorials</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img style="width: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602260048/Resources/Python_Tutorials_mdez6w.png" alt="Us">
+                        <img style="width: 100%;" class="home-image" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602260048/Resources/Python_Tutorials_mdez6w.png" alt="Us">
                     </div>
                     <p style="font-family: cursive; font-size:large">We have brought you Tutorials on the most popular programming language of the world which is widely used i.e. <b>PYTHON</b>. The entire course is in your native language <b>ODIA</b>. A course which you will find nowhere on the Internet. So, Whom are you waiting for? Lets Get Started.</p>
                     <div class="container mt-4" style="text-align: center;">
@@ -386,7 +386,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Practice and Exams</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img style="width: 100%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263326/Resources/Quiz_auto_x2_jxeqlx.jpg" alt="Us">
+                        <img style="width: 100%;" class="home-image" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263326/Resources/Quiz_auto_x2_jxeqlx.jpg" alt="Us">
                     </div>
                     <p style="font-family: cursive; font-size:large">We have brought to you Weekly as well as Monthly Quizzes to brush up your knowledge and skills. In addition to that we have also provided you Online IDEs so that you can practice on your own. You can find everything here at the cost of just 1 Click and at no extra cost.</p>
                     <div class="container mt-4" style="text-align: center;">
@@ -398,7 +398,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Notes and resources</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img style="width: 100%; height: 82%" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263928/Resources/resources_an4r1c.jpg" alt="Us">
+                        <img style="width: 100%; height: 82%" class="home-image" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602263928/Resources/resources_an4r1c.jpg" alt="Us">
                     </div>
                     <p style="font-family: cursive; font-size:large">Have you ever encountered tutorials, Notes and Resources at the same place? We have made all the facilities available for you entirely free of cost. You can enjoy the Tutorials as well as the resources collected from all over the Internet at one place. Have a good time accessing the resources and Learning from us.</p>
                     <div class="container mt-4" style="text-align: center;">
