--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -35,7 +35,7 @@
             <p class="article-content">Are You Confused about your career? Do you want to know about the different career paths that you can take upon to land at a perfect job in India? Then you are at the right place.</p>
             <p class="article-content"> We have brought to you the most popular technology that you should start working on in order to get a good job in India.</p>
             <div class="img-container mb-2" style="text-align: center;">
-              <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602269765/Resources/Articles_sjelfi.webp" alt="1001">
+              <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602275987/Resources/Articles_z8zhhf.jpg" alt="1001">
             </div>
             <p class="article-content">Browse through the above categories and know more about them.</p>
           </div>
