--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-3 section2" style="text-align: center">
+<div class="container mt-3 mb-1" style="text-align: center">
     <h1 style="color:  #00378a;">Articles</h1>
 </div>
-<div class="container mt-4 mb-4">
-    <div class="container mt-3">
+<div class="container mt-1 mb-4">
+    <div class="container">
         <br>
         <ul class="nav nav-tabs reset-nav">
           <li class="nav-item">
@@ -35,7 +35,7 @@
             <p class="article-content">Are You Confused about your career? Do you want to know about the different career paths that you can take upon to land at a perfect job in India? Then you are at the right place.</p>
             <p class="article-content"> We have brought to you the most popular technology that you should start working on in order to get a good job in India.</p>
             <div class="img-container mb-2" style="text-align: center;">
-              <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602276193/Resources/Articles_vaol6h.jpg" alt="1001">
+              <img class="article-img" style="height: 70%;" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602355418/Resources/Word_Art_2_t5hvjp.jpg" alt="1001">
             </div>
             <p class="article-content">Browse through the above categories and know more about them.</p>
           </div>
