--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -33,6 +33,11 @@
         .logo:hover{
             color: #51ffc5;
         }
+        @media only screen and (max-width: 559px){
+            .d-block{
+                height: 25rem;
+            }
+        }
     </style>
     <script>(function(w, d) { w.CollectId = "5f7a12a20f65cb31086fdf11"; var h = d.head || d.getElementsByTagName("head")[0]; var s = d.createElement("script"); s.setAttribute("type", "text/javascript"); s.async=true; s.setAttribute("src", "https://collectcdn.com/launcher.js"); h.appendChild(s); })(window, document);</script>
 </head>
