--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 <div class="container mt-3 mb-3" style="text-align: center">
-    <h1>About Us</h1>
+    <h1 style="color: #00378a;">About Us</h1>
 </div>
 <!-----------------------------DESKTOP VIEW------------------------------>
-<div class="container mt-4 mb-5 desktop-about">
+<div class="container mt-5 mb-5 desktop-about">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6">
             <img class="article-img" style="width: 95%; height: 90%" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602270204/Resources/Our_Vision_e1cahr.jpg">
