--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -301,13 +301,13 @@
                     </div>
                   </div> 
                     </div>
-                    <a class="carousel-control-prev left carousel-control" href="#carousel-example-1" role="button"
+                    <a class="carousel-control-prev left carousel-control testimonial-btn" href="#carousel-example-1" role="button"
                     data-slide="prev">
                     <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-caret-left-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M3.86 8.753l5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
                     </svg>
                     </a>
-                    <a class="carousel-control-next right carousel-control" href="#carousel-example-1" role="button"
+                    <a class="carousel-control-next right carousel-control testimonial-btn" href="#carousel-example-1" role="button"
                     data-slide="next">
                     <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-caret-right-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12.14 8.753l-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
