--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -200,7 +200,7 @@
               <a class="p-2 fa-lg ins-ic" href="https://www.instagram.com/__j.a.y.d.e.e.p__/" style="color: black; text-decoration: none;">
                 <i class="fab fa-instagram insta blue-text"> </i>
               </a>
-              <a class="p-2 fa-lg ins-ic" href="https://github.com/" style="color: black; text-decoration: none;">
+              <a class="p-2 fa-lg ins-ic" href="https://github.com/jaydeep52" style="color: black; text-decoration: none;">
                   <i class="fab fa-github blue-text"> </i>
               </a>
           </ul>
