--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -12,7 +12,7 @@
         <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602360626/Resources/Carousel2_rqtvzy.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602405037/Resources/C_dyrbxv.png" class="d-block w-100" alt="...">
+        <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602427449/Resources/Carousel3_dyec6u.png" class="d-block w-100" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -63,9 +63,6 @@
       </div>
     </div>
   </div>
-</div>
-<div class="container mt-2" style="text-align: center;">
-    <a href="{% url 'explore' %}" ><div class="btn btn-primary">View More Courses</div></a>
 </div>
 </div>
 <div class="container section2 mt-5 mb-5">
@@ -249,7 +246,8 @@
                             alt="Second sample avatar image" style="height: 23%; width: 23%">
                         </div>
                         <p style="font-family: cursive;">
-                            <i class="fas fa-quote-left"></i>I had to go through so many courses and resources; with a messed up schedule. I believe with a good schedule and cleaner plan would have helped me even more. So, from my knowledge, We have gathered all the content you need to get started with your journey to code.  <i class="fas fa-quote-right"></i></p>
+                            <i class="fas fa-quote-left"></i>When I entered university life, things were chaotic and studying coding was a daunting task being new to the coding world.  So it was always self motivation, research and hard coding that drove me forth.From all this experience and with a zeal to simply it all for the brand new coders I present this endeavour of mine.
+                            Welcome to be a part of our family!<i class="fas fa-quote-right"></i></p>
                         <h4 class="font-weight-bold">Bhabatosh Mahanta</h4>
                         <h6 class="font-weight-bold my-3">Founder & CEO</h6>
                         </div>
