--- a/main/templates/main/resources.html
+++ b/main/templates/main/resources.html
@@ -20,10 +20,13 @@
             <a class="nav-link reset-nav" data-toggle="tab" href="#menu2">C++</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link reset-nav" data-toggle="tab" href="#menu3">ML/AI</a>
+            <a class="nav-link reset-nav" data-toggle="tab" href="#menu3">Arduino</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link reset-nav" data-toggle="tab" href="#menu4">Others</a>
+            <a class="nav-link reset-nav" data-toggle="tab" href="#menu4">ML/AI</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link reset-nav" data-toggle="tab" href="#menu5">Others</a>
           </li>
         </ul>
         <div class="tab-content">
@@ -55,13 +58,20 @@
             {% endfor %}
           </div>
           <div id="menu3" class="container tab-pane fade"><br>
-            {% for ele in mlai %}
+            {% for ele in arduino %}
                 <ul>
                     <a href={{ele.link}}><li>{{ele.name}}</li></a>
                 </ul>
             {% endfor %}
           </div>
           <div id="menu4" class="container tab-pane fade"><br>
+            {% for ele in mlai %}
+                <ul>
+                    <a href={{ele.link}}><li>{{ele.name}}</li></a>
+                </ul>
+            {% endfor %}
+          </div>
+          <div id="menu5" class="container tab-pane fade"><br>
             {% for ele in others %}
                 <ul>
                     <a href={{ele.link}}><li>{{ele.name}}</li></a>
